syntax = "proto3";

package tax_service;

service TaxService {
    rpc GetRate (GetRateRequest) returns (GetRateResponse) {}
    rpc GetRates (GetRatesRequest) returns (GetRatesResponse) {}

    rpc SetRate (TaxRate) returns (EmptyResponse) {}
    rpc DeleteRate (RateLookupQuery) returns (EmptyResponse) {}
}

message EmptyResponse {}

message GetRateRequest {
    // @inject_tag: json:"ip"
    GeoIdentity ip_data = 1;

    // @inject_tag: json:"user"
    GeoIdentity user_data = 2;
}

message GeoIdentity {
    // @inject_tag: json:"zip"
    string zip_code = 1;
    // @inject_tag: json:"country"
    string country = 2;
    // @inject_tag: json:"city,omitempty"
    string city = 3;
    // @inject_tag: json:"state,omitempty"
    string state = 4;
}

message GetRateResponse {
    TaxRate vat_rate = 1;
    bool ip_data_priority = 2;
    bool user_data_priority = 3;
}

message TaxRate {
    // @inject_tag: json:"zip"
    string zip_code= 1;

    // @inject_tag: json:"country"
    string country = 2;

    // @inject_tag: json:"city,omitempty"
    string city = 3;

    // @inject_tag: gorm:"type:varchar(2)"
    string state = 4;

    // @inject_tag: json:"rate"
    float rate = 6;
}
message GetRatesRequest {
    // @inject_tag: json:"zip"
    string zip_code= 1;
    // @inject_tag: json:"country"
    string country = 2;
    // @inject_tag: json:"city,omitempty"
    string city = 3;
    // @inject_tag: json:"limit,omitempty"
    int32 limit = 4;
    // @inject_tag: json:"offset,omitempty"
    int32 offset = 5;
}

message RateLookupQuery {
    // @inject_tag: json:"zip"
    string zip_code = 1;
    // @inject_tag: json:"country"
    string country = 2;
    // @inject_tag: json:"city,omitempty"
    string city = 3;
    // @inject_tag: json:"state,omitempty"
    string state = 4;
}

message GetRatesResponse {
    // @inject_tag: json:"rates"
    repeated TaxRate rates = 1;
}